--- a/Odin-script/Lesson010/index.html
+++ b/Odin-script/Lesson010/index.html
@@ -27,6 +27,10 @@
                 <input type="tel" name="telephone" autocomplete="tel" placeholder="telephone">
                 <p>Telephone must be a valid BR number (xx 9 xxxxx xxxx)</p>
             </div>
+            <div>
+                <input type="text" placeholder="profile slug" name="profileSlug">
+                <p>Slung must be contain only lowercase letters, numbers and hyphens and be 8 - 20 charaters.</p>
+            </div>
        </form> 
     </div>
     <script src="validation.js"></script>
